<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_home"
                android:icon="@drawable/ic_menu_camera"
                android:title="@string/menu_home" />
        <item
                android:id="@+id/nav_navigation"
                android:icon="@drawable/ic_baseline_map_24"
                android:title="navigation" />
        <item
                android:id="@+id/nav_cost"
                android:icon="@drawable/ic_baseline_monetization_on_24"
                android:title="@string/menu_cost" />
        <item
                android:id="@+id/nav_todo"
                android:icon="@drawable/ic_baseline_calendar_today_24"
                android:title="@string/menu_todo" />
        <item
                android:id="@+id/nav_report"
                android:icon="@drawable/ic_baseline_assignment_24"
                android:title="@string/menu_report" />
        <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/ic_baseline_person_24"
                android:title="@string/menu_profile" />
        <item
                android:id="@+id/nav_setting"
                android:icon="@drawable/ic_baseline_settings_24"
                android:title="@string/menu_setting" />
    </group>
</menu>