<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

    <EditText
            android:id="@+id/story_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            android:layout_marginHorizontal="30sp" />

    <EditText
            android:id="@+id/story_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/consume_type"
            android:layout_marginHorizontal="30sp"/>

    <EditText
            android:id="@+id/story_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/price"
            android:layout_marginHorizontal="30sp"/>

    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/story_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/time"
            android:layout_marginHorizontal="30sp"/>

    <EditText
            android:id="@+id/story_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/details"
            android:layout_marginHorizontal="30sp" />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_margin="50sp">

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="save"
                android:id="@+id/story_saveBtn" />

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="clear"
                android:id="@+id/story_clearBtn" 
                android:layout_marginStart="30sp"/>

    </LinearLayout>


</LinearLayout>