<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="7dp">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

        <TextView
                android:id="@+id/ViewTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textStyle="bold"
                android:textSize="18sp" />

        <TextView
                android:id="@+id/ViewType"
                android:layout_width="138dp"
                android:layout_height="wrap_content"
                android:text="consume_type"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="0dp" />

        <TextView
                android:id="@+id/ViewPrice"
                android:layout_width="118dp"
                android:layout_height="wrap_content"
                android:text="@string/number"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="1dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="0dp" />

        <TextView
                android:id="@+id/ViewTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:textStyle="bold"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="2dp"
                android:layout_toStartOf="@+id/ViewType"
                android:layout_marginEnd="66dp"
                android:layout_alignParentStart="true"
                android:layout_marginStart="2dp" />

        <TextView
                android:id="@+id/ViewDetail"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:text="@string/details"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="22dp"
                android:layout_marginTop="-1dp"
                android:layout_below="@+id/ViewTitle" />
        
    </RelativeLayout>

</androidx.cardview.widget.CardView>
